# quorum

./: .gitignore  README.md
.github/workflows/: ci.yml
contracts/: Cargo.toml
contracts/treasury/: Cargo.toml
contracts/treasury/src/: lib.rs  test.rs
contracts/vote-token/: Cargo.toml
contracts/vote-token/src/: lib.rs  test.rs
frontend/: .env.local.example  package-lock.json  package.json  tailwind.config.ts  tsconfig.json  vitest.config.ts
frontend/src/__tests__/: cache.test.ts  countdown.test.ts  voting.test.ts
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/components/: AdminPanel.tsx  CountdownTimer.tsx  CreateProposalModal.tsx  EventFeed.tsx  Header.tsx  MemberList.tsx  ProposalCard.tsx  ProposalList.tsx  TreasuryStats.tsx  VoteModal.tsx  WalletConnect.tsx
frontend/src/hooks/: useEventStream.ts  useFreighter.ts  useMembers.ts  useProposals.ts
frontend/src/lib/: cache.ts  stellar.ts  token-contract.ts  treasury-contract.ts
frontend/src/types/: index.ts
scripts/: deploy_testnet.sh
